# wireguard-java

./: .bazelrc  .dockerignore  .editorconfig  .gitignore  BUILD  CMakeLists.txt  Dockerfile  Makefile  README.md  WORKSPACE  qodana.yaml  run.sh
.github/workflows/: qodana_code_quality.yml
ax.xz.logging/src/main/java/: module-info.java
ax.xz.packet/src/main/java/: module-info.java
ax.xz.raw/: module-info.java
ax.xz.raw.osx/: module-info.java
ax.xz.raw.osx/ax/xz/raw/: OSXRawSocket.java  OSXRawSocketProvider.java  OSXSyscalls.java  OSXTunProvider.java  ctl_info.java  sockaddr_ctl.java
ax.xz.raw.osx/src/main/java/: module-info.java
ax.xz.raw.posix/: jni_utils.h  libposix_raw.dylib  posix_raw.c
ax.xz.raw.posix/src/main/c/: jni_utils.h  posix_raw.c  posix_raw.h  providers.c  providers.h  test_tunnel.c
ax.xz.raw.posix/src/main/java/: module-info.java
ax.xz.raw/src/main/java/: module-info.java
ax.xz.wireguard/: .gitignore  module-info.java
ax.xz.wireguard.cli/src/main/java/: module-info.java
ax.xz.wireguard.iptables/src/main/java/: module-info.java
ax.xz.wireguard.noise/src/main/c/: arm64-chacha-neon.S  chacha-generic.c  chacha-generic.h  chacha.c  chacha.h  x86_64-chacha-avx2.S
ax.xz.wireguard.noise/src/main/java/: BUILD  module-info.java
ax.xz.wireguard/ax/xz/: CommandUtils.java
ax.xz.wireguard/ax/xz/wireguard/: DecryptionWorker.java  DelegatingStructuredTaskScope.java  (+23 more)
config/: logback.xml
stress-test/: Dockerfile  client.conf  docker-compose.yml  entrypoint.sh  entrypoint_client.sh  entrypoint_server.sh  server-entrypoint.sh  server.conf
(+216 files in other folders)
